Setup app for Heroku

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <img class="portrait" src="/img/tier.jpg">
+      <img class="portrait" src="/img/Tier.JPG">
     </div>
     {{>footer}}
   </body>
