--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p>This site is created by Steve G. It uses data from mapbox.com and weatherstack.com!</p>
       <img class="portrait" src="/img/Tier.JPG">
     </div>
     {{>footer}}
